# CoPloFlow

./: .gitignore  CHANGELOG.md  README.md  REQUIREMENTS.md  package-lock.json  package.json
data/: .gitkeep
docs/: DESIGN_F004_OUTLINE.md  DESIGN_F005_INDEX.md  DESIGN_PHASE5.md  GUIDE.html  OPTIMIZATION.md  TEST_REPORT_PHASE2.md  TEST_REPORT_PHASE3.md  TEST_REPORT_PHASE4.md
frontend/: next.config.js  package-lock.json  package.json
frontend/components/: ContextMenu.tsx  Editor.tsx  FileIcon.tsx  FileTree.tsx  ReferencesPanel.tsx  SearchPanel.tsx  SymbolOutline.tsx  ThemeProvider.tsx
frontend/pages/: _app.tsx  _error.tsx  index.tsx
frontend/scripts/: copy-monaco.js
frontend/styles/: globals.css
sidecar/: CMakeLists.txt
sidecar/include/: indexer.h  json_rpc.h  parser.h  symbol.h
sidecar/src/: indexer.cpp  json_rpc.cpp  main.cpp  parser.cpp  symbol.cpp
sidecar/tests/: test_parser.cpp  test_symbol.cpp
sidecar/tests/test_data/: sample.cpp
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  sidebar.rs
