[package]
name = "codelens"
version = "0.1.0"
description = "CodeLens 代码阅读器 - 轻量、快速、语义感知"
authors = ["CodeLens Team"]
edition = "2021"

[lib]
name = "codelens_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
tauri-plugin-dialog = "2.7.0"
